Revision history for Perl extension Rcs::Parser.

0.03  2008/10/23

	Corrected documentation to match module name.
	Separated parsing of the RCS data from reading the file.
	Added the ability to parse an RCS file from a scalar variable.

0.02  2004/04/02

	Properly blessing into the class name.
	Full copyright and license information.	

0.01  2003/09/23

	Conversion to the more correctly named Rcs::Parser for CPAN.

0.00  2002/03/25 - 2003/09/23

	Originally RCS.pm for use as the engine for analyzing code usage
	 in the "CVS Utilities" package being developed at:
	 http://www.crescendo.net/software/cvs/